Increased code coverage